tests/should_succeed/loops.jou
def main() -> int:
    # Output: 1
    # Output: 2
    # Output: 3
    i = 0
    while i < 3:
        printf("%d\n", ++i)

    # Output: 1
    # Output: 3
    i = 0
    while True:
        printf("%d\n", ++i)
        if i == 3:
            break

    # Output: 1
    # Output: 2
    # Output: 3
    for i = 1; i <= 3; i++:
        printf("%d\n", i)

    # Output: 1
    # Output: 3
    for i = 1; i <= 3; i++:
        if i == 2:
            continue
        printf("%d\n", i)

    # Output: 1
    # Output: 3
    i = 1
    for ;; i++:
        if i == 2:
            continue
        if i == 4:
            break
        printf("%d\n", i)

    # Output: 1
    # Output: 2
    # Output: 3
    i = 1
    for ;;:
        printf("%d\n", i++)
        if i == 4:
            break
